tests/snapshots/cli__crlf_debug.snap
---
source: tests/cli.rs
expression: debug
---
debug: > GET http://127.0.0.1:[port]/users
debug: < 400 Bad Request (pop: -, srv: -)
error: line one line two
debug: upstream.message = "line one\r\nline two"
