tests/snapshots/cli__device_list_json.snap
---
source: tests/cli.rs
expression: json
---
[
  {
    "id": "dev11aa22bb",
    "name": "Phone",
    "profile": {
      "id": "pk4cada1c5",
      "name": "Aggressive"
    },
    "status": "soft-disabled",
    "analytics": "none",
    "clients": 1,
    "learn_ip": true,
    "icon": "mobile-android",
    "ctrld": null,
    "resolvers": {
      "doh": "https://dns.controld.com/dev11aa22bb",
      "dot": "dev11aa22bb.dns.controld.com",
      "v4": [
        "192.0.2.10"
      ],
      "v6": [
        "2001:db8:0:0::a"
      ]
    }
  },
  {
    "id": "dev33cc44dd",
    "name": "phone",
    "profile": {
      "id": "pkae1060cf",
      "name": "Hardened"
    },
    "status": "pending",
    "analytics": "some",
    "clients": 3,
    "learn_ip": false,
    "icon": "mobile-ios",
    "ctrld": null,
    "resolvers": {
      "doh": "https://dns.controld.com/dev33cc44dd",
      "dot": "dev33cc44dd.dns.controld.com",
      "v4": [],
      "v6": []
    }
  },
  {
    "id": "dev55ee66ff",
    "name": "Router",
    "profile": {
      "id": "pkae1060cf",
      "name": "Hardened"
    },
    "status": "hard-disabled",
    "analytics": "full",
    "clients": 12,
    "learn_ip": false,
    "icon": "router-openwrt",
    "ctrld": {
      "version": "v1.5.2",
      "last_fetch": "2026-07-11T10:22:50Z"
    },
    "resolvers": {
      "doh": "https://dns.controld.com/dev55ee66ff",
      "dot": "dev55ee66ff.dns.controld.com",
      "v4": [],
      "v6": [
        "2001:db8:0:0::b"
      ]
    }
  }
]
