tests/snapshots/cli__folder_create_dry_run_human.snap
---
source: tests/cli.rs
expression: human
---
would send: POST /profiles/pk4cada1c5/groups
name     Games
action   redirect
via      LHR
enabled  true
