tests/snapshots/cli__folder_create_dry_run_json.snap
---
source: tests/cli.rs
expression: json
---
{
  "requests": [
    {
      "method": "POST",
      "path": "/profiles/pk4cada1c5/groups",
      "intent": {
        "name": "Games",
        "action": "redirect",
        "via": "LHR",
        "enabled": true
      }
    }
  ]
}
